src/generated/MiniGOParser.py
# Generated from MiniGO.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGOParser ( Parser ):

    grammarFileName = "MiniGO.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'package'", "'var'", "'type'", "'func'", 
                     "'struct'", "'if'", "'else'", "'for'", "'switch'", 
                     "'case'", "'default'", "'return'", "'break'", "'continue'", 
                     "'print'", "'println'", "'append'", "'len'", "'cap'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'<<'", "'>>'", 
                     "'&'", "'&^'", "'|'", "'^'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'&&'", "'||'", "'!'", "'='", 
                     "':='", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", 
                     "'|='", "'^='", "'<<='", "'>>='", "'&^='", "'++'", 
                     "'--'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", 
                     "':'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "PACKAGE", "VAR", "TYPE", "FUNC", "STRUCT", 
                      "IF", "ELSE", "FOR", "SWITCH", "CASE", "DEFAULT", 
                      "RETURN", "BREAK", "CONTINUE", "PRINT", "PRINTLN", 
                      "APPEND", "LEN", "CAP", "PLUS", "MINUS", "MULT", "DIV", 
                      "MOD", "LSHIFT", "RSHIFT", "AMP", "AMPXOR", "PIPE", 
                      "XOR", "EQ", "NEQ", "LT", "GT", "LEQ", "GEQ", "AND", 
                      "OR", "NOT", "ASSIGN", "DECLARE_ASSIGN", "PLUS_ASSIGN", 
                      "MINUS_ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
                      "AMP_ASSIGN", "PIPE_ASSIGN", "XOR_ASSIGN", "LSHIFT_ASSIGN", 
                      "RSHIFT_ASSIGN", "AMPXOR_ASSIGN", "INC", "DEC", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
                      "SEMICOLON", "COLON", "COMMA", "DOT", "INTLITERAL", 
                      "FLOATLITERAL", "RUNELITERAL", "RAWSTRINGLITERAL", 
                      "INTERPRETEDSTRINGLITERAL", "IDENTIFIER", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_root = 0
    RULE_topDeclarationList = 1
    RULE_variableDecl = 2
    RULE_innerVarDecls = 3
    RULE_singleVarDecl = 4
    RULE_singleVarDeclNoExps = 5
    RULE_identifierList = 6
    RULE_typeDecl = 7
    RULE_innerTypeDecls = 8
    RULE_singleTypeDecl = 9
    RULE_declType = 10
    RULE_sliceDeclType = 11
    RULE_arrayDeclType = 12
    RULE_structDeclType = 13
    RULE_structMemDecls = 14
    RULE_funcDecl = 15
    RULE_funcFrontDecl = 16
    RULE_funcArgDecls = 17
    RULE_expressionList = 18
    RULE_expression = 19
    RULE_primaryExpression = 20
    RULE_operand = 21
    RULE_literal = 22
    RULE_selector = 23
    RULE_index = 24
    RULE_arguments = 25
    RULE_appendExpression = 26
    RULE_lengthExpression = 27
    RULE_capExpression = 28
    RULE_block = 29
    RULE_statementList = 30
    RULE_statement = 31
    RULE_simpleStatement = 32
    RULE_assignmentStatement = 33
    RULE_ifStatement = 34
    RULE_loop = 35
    RULE_switchStatement = 36
    RULE_expressionCaseClauseList = 37
    RULE_expressionCaseClause = 38
    RULE_expressionSwitchCase = 39

    ruleNames =  [ "root", "topDeclarationList", "variableDecl", "innerVarDecls", 
                   "singleVarDecl", "singleVarDeclNoExps", "identifierList", 
                   "typeDecl", "innerTypeDecls", "singleTypeDecl", "declType", 
                   "sliceDeclType", "arrayDeclType", "structDeclType", "structMemDecls", 
                   "funcDecl", "funcFrontDecl", "funcArgDecls", "expressionList", 
                   "expression", "primaryExpression", "operand", "literal", 
                   "selector", "index", "arguments", "appendExpression", 
                   "lengthExpression", "capExpression", "block", "statementList", 
                   "statement", "simpleStatement", "assignmentStatement", 
                   "ifStatement", "loop", "switchStatement", "expressionCaseClauseList", 
                   "expressionCaseClause", "expressionSwitchCase" ]

    EOF = Token.EOF
    PACKAGE=1
    VAR=2
    TYPE=3
    FUNC=4
    STRUCT=5
    IF=6
    ELSE=7
    FOR=8
    SWITCH=9
    CASE=10
    DEFAULT=11
    RETURN=12
    BREAK=13
    CONTINUE=14
    PRINT=15
    PRINTLN=16
    APPEND=17
    LEN=18
    CAP=19
    PLUS=20
    MINUS=21
    MULT=22
    DIV=23
    MOD=24
    LSHIFT=25
    RSHIFT=26
    AMP=27
    AMPXOR=28
    PIPE=29
    XOR=30
    EQ=31
    NEQ=32
    LT=33
    GT=34
    LEQ=35
    GEQ=36
    AND=37
    OR=38
    NOT=39
    ASSIGN=40
    DECLARE_ASSIGN=41
    PLUS_ASSIGN=42
    MINUS_ASSIGN=43
    MULT_ASSIGN=44
    DIV_ASSIGN=45
    MOD_ASSIGN=46
    AMP_ASSIGN=47
    PIPE_ASSIGN=48
    XOR_ASSIGN=49
    LSHIFT_ASSIGN=50
    RSHIFT_ASSIGN=51
    AMPXOR_ASSIGN=52
    INC=53
    DEC=54
    LPAREN=55
    RPAREN=56
    LBRACE=57
    RBRACE=58
    LBRACKET=59
    RBRACKET=60
    SEMICOLON=61
    COLON=62
    COMMA=63
    DOT=64
    INTLITERAL=65
    FLOATLITERAL=66
    RUNELITERAL=67
    RAWSTRINGLITERAL=68
    INTERPRETEDSTRINGLITERAL=69
    IDENTIFIER=70
    WS=71
    LINE_COMMENT=72
    BLOCK_COMMENT=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(MiniGOParser.PACKAGE, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGOParser.IDENTIFIER, 0)

        def SEMICOLON(self):
            return self.getToken(MiniGOParser.SEMICOLON, 0)

        def topDeclarationList(self):
            return self.getTypedRuleContext(MiniGOParser.TopDeclarationListContext,0)


        def EOF(self):
            return self.getToken(MiniGOParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGOParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = MiniGOParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(MiniGOParser.PACKAGE)
            self.state = 81
            self.match(MiniGOParser.IDENTIFIER)
            self.state = 82
            self.match(MiniGOParser.SEMICOLON)
            self.state = 83
            self.topDeclarationList()
            self.state = 84
            self.match(MiniGOParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopDeclarationListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGOParser.VariableDeclContext)
            else:
                return self.getTypedRuleContext(MiniGOParser.VariableDeclContext,i)


        def typeDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGOParser.TypeDeclContext)
            else:
                return self.getTypedRuleContext(MiniGOParser.TypeDeclContext,i)


        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGOParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(MiniGOParser.FuncDeclContext,i)


        def getRuleIndex(self):
            return MiniGOParser.RULE_topDeclarationList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopDeclarationList" ):
                listener.enterTopDeclarationList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopDeclarationList" ):
                listener.exitTopDeclarationList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopDeclarationList" ):
                return visitor.visitTopDeclarationList(self)
            else:
                return visitor.visitChildren(self)




    def topDeclarationList(self):

        localctx = MiniGOParser.TopDeclarationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topDeclarationList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 28) != 0):
                self.state = 89
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2]:
                    self.state = 86
                    self.variableDecl()
                    pass
                elif token in [3]:
                    self.state = 87
                    self.typeDecl()
                    pass
                elif token in [4]:
                    self.state = 88
                    self.funcDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGOParser.VAR, 0)

        def singleVarDecl(self):
            return self.getTypedRuleContext(MiniGOParser.SingleVarDeclContext,0)


        def SEMICOLON(self):
            return self.getToken(MiniGOParser.SEMICOLON, 0)

        def LPAREN(self):
            return self.getToken(MiniGOParser.LPAREN, 0)

        def innerVarDecls(self):
            return self.getTypedRuleContext(MiniGOParser.InnerVarDeclsContext,0)


        def RPAREN(self):
            return self.getToken(MiniGOParser.RPAREN, 0)

        def getRuleIndex(self):
            return MiniGOParser.RULE_variableDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDecl" ):
                listener.enterVariableDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDecl" ):
                listener.exitVariableDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDecl" ):
                return visitor.visitVariableDecl(self)
            else:
                return visitor.visitChildren(self)




    def variableDecl(self):

        localctx = MiniGOParser.VariableDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDecl)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(MiniGOParser.VAR)
                self.state = 95
                self.singleVarDecl()
                self.state = 96
                self.match(MiniGOParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(MiniGOParser.VAR)
                self.state = 99
                self.match(MiniGOParser.LPAREN)
                self.state = 100
                self.innerVarDecls()
                self.state = 101
                self.match(MiniGOParser.RPAREN)
                self.state = 102
                self.match(MiniGOParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.match(MiniGOParser.VAR)
                self.state = 105
                self.match(MiniGOParser.LPAREN)
                self.state = 106
                self.match(MiniGOParser.RPAREN)
                self.state = 107
                self.match(MiniGOParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InnerVarDeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singleVarDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGOParser.SingleVarDeclContext)
            else:
                return self.getTypedRuleContext(MiniGOParser.SingleVarDeclContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGOParser.SEMICOLON)
            else:
                return self.getToken(MiniGOParser.SEMICOLON, i)

        def getRuleIndex(self):
            return MiniGOParser.RULE_innerVarDecls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInnerVarDecls" ):
                listener.enterInnerVarDecls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInnerVarDecls" ):
                listener.exitInnerVarDecls(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInnerVarDecls" ):
                return visitor.visitInnerVarDecls(self)
            else:
                return visitor.visitChildren(self)




    def innerVarDecls(self):

        localctx = MiniGOParser.InnerVarDeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_innerVarDecls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.singleVarDecl()
            self.state = 111
            self.match(MiniGOParser.SEMICOLON)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==70:
                self.state = 112
                self.singleVarDecl()
                self.state = 113
                self.match(MiniGOParser.SEMICOLON)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleVarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniGOParser.RULE_singleVarDecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarDeclNoExpsContext(SingleVarDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniGOParser.SingleVarDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def singleVarDeclNoExps(self):
            return self.getTypedRuleContext(MiniGOParser.SingleVarDeclNoExpsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclNoExps" ):
                listener.enterVarDeclNoExps(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclNoExps" ):
                listener.exitVarDeclNoExps(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclNoExps" ):
                return visitor.visitVarDeclNoExps(self)
            else:
                return visitor.visitChildren(self)


    class VarDeclWithTypeAndValueContext(SingleVarDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniGOParser.SingleVarDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifierList(self):
            return self.getTypedRuleContext(MiniGOParser.IdentifierListContext,0)

        def declType(self):
            return self.getTypedRuleContext(MiniGOParser.DeclTypeContext,0)

        def ASSIGN(self):
            return self.getToken(MiniGOParser.ASSIGN, 0)
        def expressionList(self):
            return self.getTypedRuleContext(MiniGOParser.ExpressionListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclWithTypeAndValue" ):
                listener.enterVarDeclWithTypeAndValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclWithTypeAndValue" ):
                listener.exitVarDeclWithTypeAndValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclWithTypeAndValue" ):
                return visitor.visitVarDeclWithTypeAndValue(self)
            else:
                return visitor.visitChildren(self)


    class VarDeclWithValueContext(SingleVarDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniGOParser.SingleVarDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifierList(self):
            return self.getTypedRuleContext(MiniGOParser.IdentifierListContext,0)

        def ASSIGN(self):
            return self.getToken(MiniGOParser.ASSIGN, 0)
        def expressionList(self):
            return self.getTypedRuleContext(MiniGOParser.ExpressionListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclWithValue" ):
                listener.enterVarDeclWithValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclWithValue" ):
                listener.exitVarDeclWithValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclWithValue" ):
                return visitor.visitVarDeclWithValue(self)
            else:
                return visitor.visitChildren(self)



    def singleVarDecl(self):

        localctx = MiniGOParser.SingleVarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_singleVarDecl)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = MiniGOParser.VarDeclWithTypeAndValueContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.identifierList()
                self.state = 121
                self.declType()
                self.state = 122
                self.match(MiniGOParser.ASSIGN)
                self.state = 123
                self.expressionList()
                pass

            elif la_ == 2:
                localctx = MiniGOParser.VarDeclWithValueContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.identifierList()
                self.state = 126
                self.match(MiniGOParser.ASSIGN)
                self.state = 127
                self.expressionList()
                pass

            elif la_ == 3:
                localctx = MiniGOParser.VarDeclNoExpsContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.singleVarDeclNoExps()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleVarDeclNoExpsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(MiniGOParser.IdentifierListContext,0)


        def declType(self):
            return self.getTypedRuleContext(MiniGOParser.DeclTypeContext,0)


        def getRuleIndex(self):
            return MiniGOParser.RULE_singleVarDeclNoExps

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleVarDeclNoExps" ):
                listener.enterSingleVarDeclNoExps(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleVarDeclNoExps" ):
                listener.exitSingleVarDeclNoExps(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleVarDeclNoExps" ):
                return visitor.visitSingleVarDeclNoExps(self)
            else:
                return visitor.visitChildren(self)




    def singleVarDeclNoExps(self):

        localctx = MiniGOParser.SingleVarDeclNoExpsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_singleVarDeclNoExps)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.identifierList()
            self.state = 133
            self.declType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGOParser.IDENTIFIER)
            else:
                return self.getToken(MiniGOParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGOParser.COMMA)
            else:
                return self.getToken(MiniGOParser.COMMA, i)

        def getRuleIndex(self):
            return MiniGOParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):
